--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -14,26 +14,7 @@
           <i class='bi bi-people-fill nav_icon'></i>
           <span class="nav_name">Users</span>
         </a>
-        <a href="#" class="nav_link">
-          <i class='bi bi-palette-fill nav_icon'></i>
-          <span class="nav_name">Dashboard</span>
-        </a>
-        <a href="#" class="nav_link">
-          <i class='bi bi-palette-fill nav_icon'></i>
-          <span class="nav_name">Messages</span>
-        </a>
-        <a href="#" class="nav_link">
-          <i class='bi bi-palette-fill nav_icon'></i>
-          <span class="nav_name">Bookmark</span>
-        </a>
-        <a href="#" class="nav_link">
-          <i class='bi bi-palette-fill nav_icon'></i>
-          <span class="nav_name">Files</span>
-        </a>
-        <a href="#" class="nav_link">
-          <i class='bi bi-palette-fill nav_icon'></i>
-          <span class="nav_name">Stats</span>
-        </a>
+        {% include "nav.html" %}
       </div>
     </div>
   </nav>
