--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -14,7 +14,7 @@
           <i class='bi bi-people-fill nav_icon'></i>
           <span class="nav_name">Users</span>
         </a>
-        {% include "nav.html" %}
+        {% include "components/nav.html" %}
       </div>
     </div>
   </nav>
